# paper_infinite_domain

./: .gitignore  .opt  CMakeLists.txt  DtN.sh  big_domain.sh  compare_prem.py  compare_prem_0.py  ex2p_big_domain.sh  sol.000000  sol.000001  sol.000002  sol.000003
.cache/clangd/index/: CircularMesh.cpp.D0D8201EC5FCFF7E.idx  CircularMesh.hpp.30C6C63E626D10AB.idx  MeshingPhobos.cpp.9CC0D3BDDF07BEBF.idx  Phobos_mesh.cpp.22B9C06DF172949B.idx  Poisson_DtN.cpp.D3C446354100265D.idx  Poisson_DtN_bp.cpp.C0C3D0973BF3BA6E.idx  Poisson_DtN_test.cpp.567F4BB1F7213915.idx  Poisson_big_domain.cpp.3068BC4E50183D5F.idx  Poisson_multipole.cpp.32FB170AE5B7E912.idx  ball.cpp.A3C35D81C0E5098C.idx  common.cpp.60149710F7A926CD.idx  common.hpp.243C63D12F9F0EDC.idx  common.hpp.D9172B803B45ACF6.idx  ex2p.cpp.12B0A73F042E2ED5.idx  ex2p_0.cpp.0A628ACA3D2F24D1.idx  ex2p_Phobos.cpp.517F49DFC4582F0C.idx  ex2p_ext.cpp.C9BA47151B9FF386.idx  ex2p_prem.cpp.D51165878B43DE48.idx  offset_2d.cpp.D324D10FE931505D.idx  offset_3d.cpp.EB4CB6F42085BBD4.idx  prem.cpp.A271544F672BF652.idx  simple_2d.cpp.20A4FA7C57519048.idx  simple_3d.cpp.21150C7327B814D0.idx  test.cpp.1B51BE9E8A00E96E.idx  uniform_sphere.hpp.0233FFF9B13E19CF.idx
data/: prem.200.noiso
mesh/: CircularMesh.cpp  MeshingPhobos.cpp  Phobos_mesh.cpp  backup_simple_3d_20250926_192926.cpp  common.cpp  common.hpp  offset_2d.cpp  offset_3d.cpp  prem.cpp  simple_2d.cpp  simple_3d.cpp
py/: p2.py  p3.py
src/: Poisson_DtN.cpp  Poisson_DtN_bp.cpp  Poisson_DtN_test.cpp  Poisson_big_domain.cpp  Poisson_multipole.cpp  common.hpp  ex2p.cpp  ex2p_0.cpp  ex2p_Phobos.cpp  ex2p_ext.cpp  ex2p_prem.cpp
